--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles.css">
+  <link rel="manifest" href="manifest.json" />
 
   <title>Budget Tracker</title>
 </head>
@@ -44,5 +45,18 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script src="/db.js"></script>
   <script src="/index.js"></script>
+  <script type="text/javascript">
+    (function() {
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker
+          .register("./service-worker.js")
+          .then(res => {
+            console.log(res);
+            console.log("Service Worker registered successfully.");
+          })
+          .catch(error => console.log("Service Worker registration failed:", error));
+      }
+    })();
+  </script>
 </body>
 </html>
